--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "classnames": "^2.5.1",
     "eslint-plugin-immer": "^0.0.1",
     "immer": "^10.1.1",
     "nanoid": "^5.0.7",
