--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
+    "@supabase/supabase-js": "^2.45.4",
     "classnames": "^2.5.1",
     "eslint-plugin-immer": "^0.0.1",
     "immer": "^10.1.1",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
+    "save": "^2.9.0",
     "use-immer": "^0.10.0"
   },
   "devDependencies": {
